--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en" data-ng-app="killerApp">
 <head>
 <meta charset="utf-8">
+
+<base href="/" />
+
 <title data-ng-bind="title">killer-app</title>
 
 <link rel="stylesheet" href="./assets/css/main.css"/>
