--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
 
 <title data-ng-bind="title">killer-app</title>
 
+<link rel="stylesheet" href="./assets/css/normalize.css"/>
+<link rel="stylesheet" href="./assets/css/foundation.min.css"/>
 <link rel="stylesheet" href="./assets/css/main.css"/>
 	
 </head>
 <body>
 
-
-<a href="/"><i class="fa fa-home"></i> Home</a>
-<a href="/login"><i class="fa fa-sign-in"></i> Login</a>
-<a href="/signup"><i class="fa fa-plus"></i> Sign Up</a>
-
+<div data-magellan-expedition="fixed">
+	<a href="/"><i class="fa fa-home"></i> Home</a>
+	<a href="/login"><i class="fa fa-sign-in"></i> Login</a>
+	<a href="/signup"><i class="fa fa-plus"></i> Sign Up</a>
+</div>
 
 <div data-ng-view=""></div>
 
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular.min.js"></script>
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.20/angular-route.min.js"></script>
-<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular.min.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.21/angular-route.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="./assets/js/app.js"></script>
 <script src="./assets/js/controllers.js"></script>
+<script src="./assets/js/foundation.min.js"></script>
 <script src="./assets/js/main.js"></script>
 
 </body>
